# publicationNHL

./: .gitignore  LICENSE  README.md
formalization/: NitscheHodgeLaplacian.lean  lake-manifest.json  lakefile.toml
formalization/NitscheHodgeLaplacian/: Main.lean
formalization/NitscheHodgeLaplacian/Foundations/: BVSpace.lean  DifferentialForms.lean  Discretization.lean  Domains.lean  Embedding.lean  LpSpaces.lean  Sobolev.lean  Trace.lean  WeakSolutions.lean
formalization/graphs/: import_graph.dot  proof_chain.dot
formalization/scripts/: generate_import_graph.sh  generate_proof_graph.py
numericalExperiments/: README.md  pyproject.toml  run_all.py  shared.py  table1_poincare_convex.py  table2_poincare_h_independence.py  table3_galerkin_lp_stability.py  table4_poincare_nonconvex.py  table5_comparison.py
